2002-07-01  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, README:  Incremented version to 0.12.4.

        * m4/glut.m4:  Added "-lXmu" to libs needed by glut.

        * NEWS:  Updates for 0.12.4 release.

        * m4/gl.m4:  Fixed bug in libGL detection macro (missing comma).

2002-06-30  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/doc2.cpp:  Use a reasonable value for
          the buffer size for z::filebuf.

        * NEWS:  Updates for 0.12.3 release.

2002-06-29  Braden McDaniel  <braden@endoframe.com>

        * README: Added documentation for --with-doxygen configure
          option.

2002-06-28  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp:  Fixes to build with
          gcc 2.95.3.

2002-06-25  Braden McDaniel  <braden@endoframe.com>

        * private.h: Fixes to OPENVRML_VERIFY_ macro.

        * ScriptJDK.cpp: Quelled some output about unimplemented
          functions. (Use Doxygen @todo instead.)

        * script.cpp: Utility methods to set up the JavaScript
          environment should throw std::bad_alloc on failure rather than
          return false.

2002-06-22  Braden McDaniel  <braden@endoframe.com>

        * Fixes for compiling with Microsoft Visual C++ 6.0 sp5.

2002-06-22  Braden McDaniel  <braden@endoframe.com>

        * Fixed a bunch of warnings and errors flagged by the Intel C++
          compiler.

        * src/openvrml/OpenVRML/VrmlMatrix.cpp:  Fixed errors
          dereferencing matrix values.

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/Vrml97Parser.cpp:  Changed Vrml97Scanner
          to use a std::istream rather than an istream.

2002-06-21  Braden McDaniel  <braden@endoframe.com>

        * doc/openvrml.css: Stylesheet fixes for consistency with Web
          site.
