@@ -1,3 +1,9 @@
+2002-07-03  Braden McDaniel  <braden@endoframe.com>
+
+        * src/lookat/lookat.cpp:  Code cleanup; delete the VrmlScene and
+          Viewer atexit. (glut provides no mechanism for cleaning up
+          resources when the window is closed.)
+
 2002-07-01  Braden McDaniel  <braden@endoframe.com>
 
         * configure.ac, README:  Incremented version to 0.12.4.
